# video_compressing

./: CMakeLists.txt  main.cpp  video.h
ImageProcess/: DCT.h  Image.cpp  Image.h  PixelRGB.h  PixelYCbCr.h  clipping.h
ImageProcess/FastDCT/: FastDctFft.cpp  FastDctLee.cpp
